src/App.css
@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Chivo+Mono:ital,wght@0,500;1,500&family=Fragment+Mono:ital@0;1&family=Nunito:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&family=Sofia+Sans:wght@300;400&display=swap');

@import url("https://use.typekit.net/doo7gcl.css");

*, h3{
  margin: 0 0;
  padding: 0 0;
}
html{
  margin: 0 0;
  padding: 0 0;
}
.material-symbols-outlined {
  font-family: 'Material Symbols Outlined';
  font-weight: normal;
  font-style: normal;
  font-size: 42px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  color: rgb()
} 
.App {
  display: flex;
  flex-direction: column;
  text-align: center;
  background-color: rgb(246, 197, 83);
  min-height: 100vh;
}
.App-link {
  color: #61dafb;
}
:is(h1, h2, h2, h4, h6){
  font-family: alkaline-caps, sans-serif;
}
h1{
  font-size: 2rem;
  line-height: 1.8rem;
  margin: 0 0;
}
h2{
  font-family: basic-sans, sans-serif;
  font-weight: 700;
  color: rgb(41, 41, 46);
  font-size: 1.8rem;
}
h3{
  font-size: 1.2rem;
  font-family: halogen,sans-serif;
  font-weight: 900;
  font-style: normal;
  color:rgb(246, 197, 83);
  text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
}
h6{
  color: rgba(224, 224, 237, 0.8);
  font-family: basic-sans, sans;
  font-size: .9rem;
  padding-top: 22px;
}
a{
  text-decoration: none;
}
.price-disp{
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  width: 126px;
  height: 126px;
}
.item h3{
  font-family: lust-script-display;
  font-size: 2.6rem;
  transition: ease 260ms;
  background-color: rgb(30, 144, 255);
  border: 4px solid rgb(255, 255, 255);
  padding: 16px 16px;
  border-radius: 50%;
  transform: rotate(6deg);
  opacity: .8;
}
.item h3:hover{
  transform: rotate(-14deg);
  opacity: 1;
}
.item h2{
  color:rgb(255, 255, 255);
  line-height: 1.8rem;
  text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
  transition: ease 260ms;
}
.item h2:hover{
  color: rgb(30, 144, 255);
  text-shadow: -3px 2px 4px rgb(22, 22, 26);
  transition: ease 260ms;
}
main{
  background-color: rgba(246, 197, 83, 1);
  display: grid;
}
.attn{
  color: dodgerblue;
  z-index: 100;
}
.usd{
  color: rgb(246, 197, 83);
  font-family: alkaline, script;
  font-size: 2rem;
}
.item-show h2{
  line-height: 1.6rem;
}
.item-show h3{
  text-align: left;
}
.item-show h4{
  font-family: alkaline-caps, script;
  font-size: 1.8rem;
  background-color: rgb(255, 255, 255);
  margin: 32px 0 48px 0;
  padding: 12px 16px;
  border-radius: 48px 48px;
  transform: rotate(-4deg);
  box-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
}
.logo{
  display: flex;
  width:88px;
  height: 88px;
  background-image: url(/public/img/logo-r.png);
  background-repeat: no-repeat;
  background-size: contain;
  align-items: center;
  justify-content: center;
  z-index: 100;
}
.spin{
  display: flex;
  width:88px;
  height: 88px;
  background-image: url(/public/img/logo-spin.png);
  background-repeat: no-repeat;
  background-size: contain;
  align-items: center;
  justify-content: center;
  animation: scroll-anim 10s linear infinite;
  z-index: 100;
}

@keyframes scroll-anim {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
label{
  font-family: alkaline-caps, script;
  color:rgb(41, 41, 46);
  font-size: 2rem;
  margin: 12px 12px;
}
.big{
  font-size: 4rem;
  line-height: 3.6rem;
  font-family: alkaline, script;
  text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
  margin-left: -166px;
  z-index: 80;
  position: relative;
}
.head-title{
  font-family: alkaline, monospace;
  color: rgb(246, 197, 83);
  font-size: 3.2rem;
  margin: 0 0;
}
.form{
  display: flex;
  flex-direction: column;
  font-family: basic-sans, monospace;
  font-weight: 800;
  font-size: 1.4rem;
  text-align: left;
  justify-content: center;
  width: 80vw;
  max-width: 960px;
  color:rgb(41, 41, 46);
}
.main-wrap{
  background: url(https://via.placeholder.com/750x220) no-repeat;
  background-size: contain;
  font-family: alfarn-2, monospace;
  font-size: 1.4rem;
  flex-direction: column;
  display: flex;
  align-items: center;
  background-color: rgba(246, 197, 83, 1);
  color: rgba(41, 41, 46);
}
.welcome{
  margin-top: 32px;
  max-width: 768px;
  text-align: left;
}
.nav-el li{
  font-size: 48px;
}
li img{
  width: 60px;
}
nav{
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  background-color: rgb(41, 41, 46);
}
article{
  box-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
  width: 80vw;
  display: flex;
  flex-direction: column;
}
section{
  width: 90vw;
  margin: 32px auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
}
section h1{
  text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
}
button{
  font-family: halogen, sans-serif;
  text-transform: uppercase;
  background-color: dodgerblue;
  border: none;
  color: rgb(255, 255, 255);
}
button:hover{
  background-color: rgb(13, 99, 184);
  box-shadow: 2px 2px 6px rgb(41, 41, 46);
}
.hero{
  font-family: alkaline-caps, sans-serif;
  font-size: 1.6rem;
  font-weight: 700;
  color: rgba(255,255,255,1);
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: url('/public/img/dream-finds.jpg');
  background-size: cover;
  background-position: center;
  height: 420px;
  border-bottom: 16px solid dodgerblue;
  box-shadow: 2px 2px 6px rgba(0,0,0,.8);
}
.hero-text{
  max-width: 840px;
  line-height: 1.6rem;
}
.new-item{
  display: flex;
  justify-content: center;
}
input[type=textarea]{
  word-break: break-all;
  width: 100%;
  background: rgb(255, 255, 255);
  height: 6em;
  width: 100%;
  white-space: normal;
  word-wrap: break-word;
  flex-direction: column;
}
input[type=submit]{
  background-color: dodgerblue;
  box-shadow: 2px 2px 6px rgba(0,0,0,.8);
  transform: scale(.96);
  border: none;
  transition: ease 260ms;
}
input[type=submit]:hover{
  background-color: rgb(13, 99, 184);
  transform: scale(.98);
  transition: ease 260ms;
  border: none;
}
.new-item input[type=text]{
  display: flex;
  justify-content: center;
  background-color: antiquewhite;
  margin-bottom: 0;
  color:rgb(41, 41, 46);
  font-weight: 700;
}
:is(.new-item input[type=text], .new-item input[type=textarea]){
  display: flex;
  justify-content: center;
  background-color: antiquewhite;
  color:rgb(41, 41, 46);
  font-weight: 700;
  word-break: break-all;
}
.new-item input[type=textarea]{
  word-break:break-all;
  overflow: scroll;
  color:rgb(41, 41, 46);
}
.new-item input[type=submit]{
  font-family: halogen, sans-serif;
  text-transform: uppercase;
  width: 50%;
  margin: 16px 16px;
}
.item{
  display: flex;
  flex-direction: column;
  background-color: rgba(41,41,52,.6);
  justify-content: space-around;
  padding: 22px 22px;
  border-radius: 6px 6px;
  align-items: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  transform: scale(.92);
  filter: brightness(.9);
  transition: ease 260ms;
  min-height: 200px;
}
.item:hover{
  transform: scale(.95);
  mix-blend-mode: normal;
  filter: brightness(1.1);
  transition: ease 260ms;
  box-shadow: -3px 2px 8px rgba(41, 41, 46, 0.8);
  color:rgb(246, 197, 83)
}
.item-show{
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.item-show-grid{
  display: flex;
  flex-direction: column;
  margin: 12px 22px;
  justify-content: center;
  align-items: center;
  width: 92%;
}
.item-show button{
  border-radius: 6px 6px;
  box-shadow: -3px 2px 8px rgba(41, 41, 46, 0.8);
  width: 66%;
}
.item-show-grid img{
  border-radius: 6px 6px;
  border: 12px solid dodgerblue;
  box-shadow: -3px 2px 8px rgba(41, 41, 46, 0.8);
}
.item-show h3, h4{
  color:rgb(41, 41, 46);
  text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.2);
  font-family: basic-sans, sans-serif;
}
.footer{
  margin-top: auto;
  padding-right: 32px;
  bottom: 0;
  height: 4.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  box-shadow: 2px -1px 4px rgba(41, 41, 46, 0.8);
  background-color: rgb(41, 41, 46);
}
.foot-links{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}
@media (width <= 999px){
  .big{
    font-size: 4rem;
    line-height: 3.2rem;
    font-family: alkaline, script;
    text-shadow: -3px 2px 4px rgba(41, 41, 46, 0.8);
    margin-left: 0px;
  }
  .hero-text{
    margin: 16px;
    line-height: 1.6rem;
  }
  .item-show{
    display: grid;
    grid-template-columns: 1fr;
  }
}

@media (width <= 736px){
  h6{
    font-size: .7rem;
  }
  .item-show-grid img{
    border: 8px solid dodgerblue;
  }
}

@media (width <= 499px){
  .head-title{
    display: none;
  }
  h6{
    font-size: .5rem;
  }
}

